--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,24 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+.example-fill-remaining-space {
+  /*// This fills the remaining space, by using flexbox. */
+  /*// Every toolbar row uses a flexbox row layout.*/
+  flex: 1 1 auto;
+}
+html, body, material-app, md-sidenav-container, .my-content {
+  margin: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.main{
+    background-color: #FCFCFC;
+    width: 350px;
+    margin: 50px auto;
+    border-radius: 5px;
+    padding: 20px;
+}
+.form-input{
+    display: block;
+}
